--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/Dto.cs.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/Dto.cs.vm
@@ -1,3 +1,4 @@
+using Admin.NET.Core.Util.LowCode.Dto;
 using System;
 
 namespace @Model.NameSpace
@@ -20,7 +21,7 @@ if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnN
         @:/// <summary>
         @:/// @column.ColumnComment
         @:/// </summary>
-        @:public @column.NetType @column.ColumnName { get; set; }
+        @:public @column.DtoNetType @column.ColumnName { get; set; }
         @:
 }
     }
