--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
@@ -1,4 +1,5 @@
 using Admin.NET.Core;
+using Admin.NET.Core.Util.LowCode.Dto;
 using System;
 using System.ComponentModel.DataAnnotations;
 
@@ -31,7 +32,7 @@ if (@column.ColumnKey != "True"){
         @:/// <summary>
         @:/// @column.ColumnComment
         @:/// </summary>
-        @:public virtual @(@column.NetType) @column.ColumnName { get; set; }
+        @:public virtual @(@column.DtoNetType) @column.ColumnName { get; set; }
         @:
 }
 }
