--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
@@ -1,4 +1,5 @@
-﻿using System;
+﻿using Admin.NET.Core.Util.LowCode.Dto;
+using System;
 
 namespace @Model.NameSpace
 {
@@ -8,11 +9,26 @@ namespace @Model.NameSpace
     public class @(@Model.ClassName)Output
     {
 @foreach (var column in Model.TableField){
+if(@column.DtoNetType == "Front_FileDto[]"){
+        @:/// <summary>
+        @:/// @column.ColumnComment
+        @:/// </summary>
+        @:public ICollection<Front_FileDto> @column.ColumnName { get; set; }
+        @:
+        
+        @:/// <summary>
+        @:/// @column.ColumnComment
+        @:/// </summary>
+        @:public String @(@column.ColumnName)_Str { get; set; }
+        @:
+}else{
         @:/// <summary>
         @:/// @column.ColumnComment
         @:/// </summary>
         @:public @column.NetType @column.ColumnName { get; set; }
         @:
+}
+
 }
     }
 }
