--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/Mapper.cs.cshtml
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/Mapper.cs.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Admin.NET.Application.Service.System.LowCode.Dto.Front_CodeGenerate
 using Mapster;
-using Admin.NET.Application.Entity;
 using Admin.NET.Core.Util.LowCode.Front.Code;
 using Admin.NET.Core.Util.LowCode.Dto;
+using @(@Model.NameSpace).Entity;
 
 namespace @Model.NameSpace
 {
