--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/editForm.vue.cshtml
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/editForm.vue.cshtml
@@ -189,12 +189,8 @@ if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnN
 }
         visible: false,
         confirmLoading: false,
-@if(@Model.LowCodeId == null){
-        @:form: this.$form.createForm(this)
-}else{
-        @:dynamicData: @Model.DynamicData,
-        @:formDesign: @Model.FormDesign
-}
+        dynamicData: @Model.DynamicData,
+        formDesign: @Model.FormDesign
       }
     },
     methods: {
@@ -230,66 +226,15 @@ if (@column.EffectType == "select" || @column.EffectType == "radio" || @column.E
 }
 }
         this.$nextTick(() => {
-@if(@Model.LowCodeId != null){
-          @:let data = { ...
-}else{
-          @:this.form.setFieldsValue(
-}
+          let data = { ...
             {
-@if(@Model.LowCodeId != null){
 @foreach (var column in Model.TableField){
               @:@column.OriginalColumnName: record.@column.ColumnName,
 }
-}else{
-//属性传递开始              
-@{var editDataColumn = 0;}
-@foreach (var column in Model.TableField){
-if(@column.ColumnKey == "True"){
-              @:@column.ColumnName: record.@column.ColumnName,
-}
-}
-@foreach (var column in Model.TableField){
-if (@column.WhetherAddUpdate == "Y"){
-if (@column.EffectType == "checkbox"){
-editDataColumn++;
-if(editDataColumn != editData) {
-              @:@column.ColumnName: JSON.parse(record.@column.ColumnName),
-} else {
-              @:@column.ColumnName: JSON.parse(record.@column.ColumnName)
-}
-}else if (@column.EffectType != "datepicker"){
-editDataColumn++;
-if(editDataColumn != editData){
-              @:@column.ColumnName: record.@column.ColumnName,
-} else {
-              @:@column.ColumnName: record.@column.ColumnName
-}
-}
-}
-}
-//属性传递结束
-}
             }
-@if(@Model.LowCodeId != null){
-          @:}
-          @:this.$refs.kfb.setData(data)
-}else{
-          @:)
-}
+          }
+          this.$refs.kfb.setData(data)
         })
-@if(@Model.LowCodeId == null){
-@foreach (var column in Model.TableField){
-if (@column.WhetherAddUpdate == "Y"){
-if (@column.EffectType == "datepicker"){
-        // 时间单独处理
-        //if (record.@column.ColumnName != null) {
-        @:this.form.getFieldDecorator('@column.ColumnName', { initialValue: moment(record.@column.ColumnName, 'YYYY-MM-DD') })
-        //}
-        @:this.@(@column.ColumnName)DateString = moment(record.@column.ColumnName).format('YYYY-MM-DD')
-}
-}
-}
-}
 @foreach (var column in Model.TableField){
 if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnName != ""){
       @:this.@(@Model.ClassName)Fk@(@column.FkEntityName)List()
@@ -297,60 +242,21 @@ if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnN
 }
       },
       handleSubmit () {
-@if(@Model.LowCodeId == null){
-        @:const { form: { validateFields } } = this
-        @:this.confirmLoading = true
-        @:validateFields((errors, values) => {
-          @:if (!errors) {
-            @:for (const key in values) {
-              @:if (values[key] == null) continue
-              @:if (typeof (values[key]) === 'object') {
-                @:values[key] = JSON.stringify(values[key])
-                 @:this.record[key] = values[key]
-              @:} else {
-                 @:this.record[key] = values[key]
-              @:}
-            @:}
-@foreach (var column in Model.TableField){
-if (@column.WhetherAddUpdate == "Y"){
-if (@column.EffectType == "datepicker"){
-            @:values.@column.ColumnName = this.@(@column.ColumnName)DateString
-            @:this.record.@column.ColumnName = this.@(@column.ColumnName)DateString
-}
-}
-}
-            @:@(@Model.ClassName)Edit(this.record).then((res) => {
-              @:if (res.success) {
-                @:this.$message.success('编辑成功')
-                @:this.confirmLoading = false
-                @:this.$emit('ok', this.record)
-                @:this.handleCancel()
-              @:} else {
-                @:this.$message.error('编辑失败：' + JSON.stringify(res.message))
-              @:}
-            @:}).finally((res) => {
-              @:this.confirmLoading = false
-            @:})
-          @:}else{
-            @:this.confirmLoading = false
-          @:} 
-}else{
-        @:this.$refs.kfb.getData().then(values => {
-		  @:values.Id = this.Id
-          @:let data = { ...values };
-            @:@(@Model.ClassName)Edit(data).then((res) => {
-              @:if (res.success) {
-                @:this.$message.success('编辑成功')
-                @:this.confirmLoading = false
-                @:this.$emit('ok', values)
-                @:this.handleCancel()
-              @:} else {
-                @:this.$message.error('编辑失败：' + JSON.stringify(res.message))
-              @:}
-            @:}).finally((res) => {
-              @:this.confirmLoading = false
-            @:})
-}
+        this.$refs.kfb.getData().then(values => {
+		  values.Id = this.Id
+          let data = { ...values };
+            @(@Model.ClassName)Edit(data).then((res) => {
+              if (res.success) {
+                this.$message.success('编辑成功')
+                this.confirmLoading = false
+                this.$emit('ok', values)
+                this.handleCancel()
+              } else {
+                this.$message.error('编辑失败：' + JSON.stringify(res.message))
+              }
+            }).finally((res) => {
+              this.confirmLoading = false
+            })
         });
       },
 @foreach (var column in Model.TableField){
@@ -363,11 +269,7 @@ if (@column.EffectType == "datepicker"){
 }
 }
       handleCancel () {
-@if(@Model.LowCodeId == null){
-        @:this.form.resetFields()
-}else{
-        @:this.$refs.kfb.reset()
-}
+        this.$refs.kfb.reset()
         this.visible = false
       }
     }
