--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.cshtml
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.cshtml
@@ -1,5 +1,6 @@
 @model Admin.NET.Application.Service.System.LowCode.Dto.Front_CodeGenerate
 using @(Model.NameSpace).Entity;
+using Admin.NET.Core;
 using Admin.NET.Core.Util.LowCode;
 using Furion.DatabaseAccessor;
 using Furion.DependencyInjection;
