代码生成模板调整

--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Manage.js.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Manage.js.vm
@@ -41,7 +41,7 @@ export const update@(@Model.ClassName) = (params?: any) =>
 export const get@(@Model.ClassName)PageList = (params?: any) => 
 	request({
 			url: Api.Get@(@Model.ClassName)Page,
-			method: 'get',
+			method: 'post',
 			data: params,
 		});
 
