update Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm. 去除多余空格，前端报mixed spaces and tabs
Signed-off-by: 尽在可能 <421981095@qq.com>

--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
@@ -126,9 +126,9 @@
 				layout="total, sizes, prev, pager, next, jumper"
 	/>
 			<editDialog
-			  ref="editDialogRef"
-			  :title="edit@(@Model.ClassName)Title"
-			  @@reloadTable="handleQuery"
+				ref="editDialogRef"
+				:title="editBusGroupTitle"
+				@reloadTable="handleQuery"
       />
 		</el-card>
 	</div>
